[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/fonts/quicksand-variable-font-wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://levels/home.gd" type="Script" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Assets/textures/menu_title.png" type="Texture" id=4]
[ext_resource path="res://Assets/textures/displacement_map.png" type="Texture" id=5]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;
render_mode unshaded;

uniform sampler2D sFlowMap;
uniform vec4 cColor : hint_color = vec4(1.);

float remap01(float x, float m_, float _m)
{
	return clamp((x-m_)/(_m-m_), 0., 1.);
}

void flowmap(
	float time,
    float blend_cycle, float cycle_speed,
    float offset,
    vec2 flow, float flow_speed, vec2 flow_scale,
    vec2 base_uv,
    out float blend_factor,
    out vec2 ouv1, out vec2 ouv2)
{
    // Compute cycle, phases
	float half_cycle = blend_cycle * 0.5;

	float phase0 = mod(offset + time * cycle_speed, blend_cycle);
	float phase1 = mod(offset + time * cycle_speed + half_cycle, blend_cycle);

	// Blend factor to mix the two layers
	blend_factor = abs(half_cycle - phase0)/half_cycle;

	// Offset by halfCycle to improve the animation for color (for normalmap not absolutely necessary)
	phase0 -= half_cycle;
	phase1 -= half_cycle;

	// Multiply with scale to make flow speed independent from the uv scaling
	flow *= flow_speed * flow_scale;

	ouv1 = flow * phase0 + base_uv;
	ouv2 = flow * phase1 + base_uv;
}

// Fragment Shader
void fragment()
{
	vec2 ouv1, ouv2;
	float blend_factor;
	vec4 map = texture(sFlowMap, UV);
	
	flowmap(TIME, 1.0, 0.5, 0.,
	    -1.+2.*map.rg, 2.0, vec2(0.01, 0.02),
	    UV,
	    blend_factor, ouv1, ouv2);
	COLOR = cColor*mix(texture(TEXTURE, ouv1), texture(TEXTURE, ouv2), blend_factor);
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )
shader_param/cColor = Color( 1, 0.956863, 0.756863, 1 )
shader_param/sFlowMap = ExtResource( 5 )

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 1 )

[node name="Home" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
texture = ExtResource( 3 )
expand = true

[node name="Title" type="TextureRect" parent="."]
material = SubResource( 6 )
margin_left = 256.0
margin_top = 64.0
margin_right = 1280.0
margin_bottom = 576.0
rect_scale = Vector2( 0.5, 0.25 )
texture = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 425.0
margin_right = 599.0
margin_bottom = 600.0
size_flags_horizontal = 4
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Continue" type="Button" parent="VBoxContainer"]
margin_top = 202.0
margin_right = 174.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Continue"

[node name="NewGame" type="Button" parent="VBoxContainer"]
margin_top = 252.0
margin_right = 174.0
margin_bottom = 298.0
custom_fonts/font = SubResource( 2 )
text = "New Game"

[node name="Options" type="Button" parent="VBoxContainer"]
margin_top = 302.0
margin_right = 174.0
margin_bottom = 348.0
custom_fonts/font = SubResource( 3 )
disabled = true
text = "Options"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 352.0
margin_right = 174.0
margin_bottom = 398.0
custom_fonts/font = SubResource( 4 )
text = "Quit"
[connection signal="pressed" from="VBoxContainer/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
